// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExerciseCard Snapshot Tests renders active state with logger row and suggestion banner 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 shadow-lg shadow-black/20 relative overflow-hidden transition-all ring-2 ring-primary-500/50"
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
      <p
        class="mt-1 text-[11px] text-surface-500"
        data-testid="session-volume-line"
      >
        Projected volume
         
        <span
          class="text-surface-300"
        >
          1,800
           
          kg
        </span>
      </p>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="space-y-2 pt-1"
      >
        <div
          class="flex items-start gap-2 rounded-lg px-3 py-2 transition-colors bg-primary-500/10"
        >
          <svg
            aria-hidden="true"
            class="tabler-icon tabler-icon-sparkles text-primary-400 flex-shrink-0 mt-0.5"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 18a2 2 0 0 1 2 2a2 2 0 0 1 2 -2a2 2 0 0 1 -2 -2a2 2 0 0 1 -2 2m0 -12a2 2 0 0 1 2 2a2 2 0 0 1 2 -2a2 2 0 0 1 -2 -2a2 2 0 0 1 -2 2m-7 12a6 6 0 0 1 6 -6a6 6 0 0 1 -6 -6a6 6 0 0 1 -6 6a6 6 0 0 1 6 6"
            />
          </svg>
          <p
            aria-live="polite"
            class="flex-1 text-[12px] leading-snug text-primary-400"
          >
            <span
              class="font-medium"
            >
              60 kg
               × 
              8–12
               @ 2 RIR
            </span>
            <span>
               — 
              starting point estimated from your training profile
            </span>
          </p>
          <button
            aria-label="How this suggestion works"
            class="flex-shrink-0 p-0.5 transition-colors text-primary-400/70 hover:text-primary-300"
          >
            <svg
              class="tabler-icon tabler-icon-info-circle "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
              />
              <path
                d="M12 9h.01"
              />
              <path
                d="M11 12h1v4h1"
              />
            </svg>
          </button>
        </div>
        <div
          aria-label="Set 1 logger"
          class="rounded-lg border border-primary-500/40 p-2.5 space-y-2"
          role="group"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="w-3 flex-shrink-0 text-[12px] font-medium text-surface-400 text-center"
            >
              1
            </span>
            <div
              class="flex-1 flex items-center gap-0.5 min-w-0"
            >
              <button
                aria-label="Decrease weight"
                class="min-w-[44px] min-h-[52px] flex items-center justify-center rounded-lg bg-surface-800/50 text-surface-300 hover:text-surface-100 active:bg-surface-700 transition-colors disabled:opacity-30"
                type="button"
              >
                <svg
                  class="tabler-icon tabler-icon-minus "
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12l14 0"
                  />
                </svg>
              </button>
              <button
                aria-label="Weight: 60 kg. Tap to type"
                class="w-full min-w-0 min-h-[52px] flex flex-col items-center justify-center leading-tight"
                type="button"
              >
                <span
                  class="font-mono text-[15px] text-surface-100 whitespace-nowrap"
                >
                  60
                </span>
                <span
                  class="text-[10px] uppercase tracking-wide text-surface-500"
                >
                  kg
                </span>
              </button>
              <button
                aria-label="Increase weight"
                class="min-w-[44px] min-h-[52px] flex items-center justify-center rounded-lg bg-surface-800/50 text-surface-300 hover:text-surface-100 active:bg-surface-700 transition-colors disabled:opacity-30"
                type="button"
              >
                <svg
                  class="tabler-icon tabler-icon-plus "
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 5l0 14"
                  />
                  <path
                    d="M5 12l14 0"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex-1 flex items-center gap-0.5 min-w-0"
            >
              <button
                aria-label="Decrease reps"
                class="min-w-[44px] min-h-[52px] flex items-center justify-center rounded-lg bg-surface-800/50 text-surface-300 hover:text-surface-100 active:bg-surface-700 transition-colors disabled:opacity-30"
                type="button"
              >
                <svg
                  class="tabler-icon tabler-icon-minus "
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12l14 0"
                  />
                </svg>
              </button>
              <button
                aria-label="Reps: 10 reps. Tap to type"
                class="w-full min-w-0 min-h-[52px] flex flex-col items-center justify-center leading-tight"
                type="button"
              >
                <span
                  class="font-mono text-[15px] text-surface-100 whitespace-nowrap"
                >
                  10
                </span>
                <span
                  class="text-[10px] uppercase tracking-wide text-surface-500"
                >
                  reps
                </span>
              </button>
              <button
                aria-label="Increase reps"
                class="min-w-[44px] min-h-[52px] flex items-center justify-center rounded-lg bg-surface-800/50 text-surface-300 hover:text-surface-100 active:bg-surface-700 transition-colors disabled:opacity-30"
                type="button"
              >
                <svg
                  class="tabler-icon tabler-icon-plus "
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 5l0 14"
                  />
                  <path
                    d="M5 12l14 0"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex items-stretch gap-2"
          >
            <button
              aria-label="4+ reps in reserve (cruise)"
              aria-pressed="false"
              class="flex-1 min-h-[52px] rounded-xl flex flex-col items-center justify-center gap-0 font-medium transition-colors bg-surface-800 text-surface-300 hover:bg-surface-700"
              type="button"
            >
              <span
                class="text-[16px] font-semibold leading-tight"
              >
                4+
              </span>
              <span
                class="text-[10px] leading-tight text-surface-500"
              >
                cruise
              </span>
            </button>
            <button
              aria-label="3 reps in reserve (easy)"
              aria-pressed="false"
              class="flex-1 min-h-[52px] rounded-xl flex flex-col items-center justify-center gap-0 font-medium transition-colors bg-surface-800 text-surface-300 hover:bg-surface-700"
              type="button"
            >
              <span
                class="text-[16px] font-semibold leading-tight"
              >
                3
              </span>
              <span
                class="text-[10px] leading-tight text-surface-500"
              >
                easy
              </span>
            </button>
            <button
              aria-label="2 reps in reserve (good)"
              aria-pressed="true"
              class="flex-1 min-h-[52px] rounded-xl flex flex-col items-center justify-center gap-0 font-medium transition-colors bg-primary-500 text-white"
              type="button"
            >
              <span
                class="text-[16px] font-semibold leading-tight"
              >
                2
              </span>
              <span
                class="text-[10px] leading-tight text-white/80"
              >
                good
              </span>
            </button>
            <button
              aria-label="1 reps in reserve (hard)"
              aria-pressed="false"
              class="flex-1 min-h-[52px] rounded-xl flex flex-col items-center justify-center gap-0 font-medium transition-colors bg-surface-800 text-surface-300 hover:bg-surface-700"
              type="button"
            >
              <span
                class="text-[16px] font-semibold leading-tight"
              >
                1
              </span>
              <span
                class="text-[10px] leading-tight text-surface-500"
              >
                hard
              </span>
            </button>
            <button
              aria-label="0 reps in reserve (maxed)"
              aria-pressed="false"
              class="flex-1 min-h-[52px] rounded-xl flex flex-col items-center justify-center gap-0 font-medium transition-colors bg-surface-800 text-surface-300 hover:bg-surface-700"
              type="button"
            >
              <span
                class="text-[16px] font-semibold leading-tight"
              >
                0
              </span>
              <span
                class="text-[10px] leading-tight text-surface-500"
              >
                maxed
              </span>
            </button>
            <button
              aria-label="Add set feedback"
              class="relative min-w-[52px] min-h-[52px] rounded-xl flex items-center justify-center transition-colors text-surface-400 hover:text-surface-200 bg-surface-800/50 hover:bg-surface-800"
              type="button"
            >
              <svg
                class="tabler-icon tabler-icon-message-plus "
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 9h8"
                />
                <path
                  d="M8 13h6"
                />
                <path
                  d="M12.01 18.594l-4.01 2.406v-3h-2a3 3 0 0 1 -3 -3v-8a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v5.5"
                />
                <path
                  d="M16 19h6"
                />
                <path
                  d="M19 16v6"
                />
              </svg>
            </button>
          </div>
          <button
            class="w-full bg-primary-500 hover:bg-primary-600 text-white rounded-xl min-h-[52px] text-base font-semibold transition-colors disabled:opacity-40"
            type="button"
          >
            Log set
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="px-3 py-3 space-y-2"
    >
      <div
        class="flex items-center gap-4 text-xs px-1"
      />
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders bodyweight exercise 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Pull-ups
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Back
          </span>
           · bodyweight
        </p>
      </button>
      <div
        class="mt-2"
      >
        <div
          data-testid="segmented-control"
        >
          <button
            data-selected="true"
          >
            Bodyweight
          </button>
          <button
            data-selected="false"
          >
            Weighted
          </button>
          <button
            data-selected="false"
          >
            Assisted
          </button>
        </div>
      </div>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          BW
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          BW
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          BW
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders empty state (no sets logged) 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders in lb unit mode 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          132.5
           lbs
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          132.5
           lbs
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          132.5
           lbs
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders with completed sets 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
      <p
        class="mt-1 text-[11px] text-surface-500"
        data-testid="session-volume-line"
      >
        Volume
         
        <span
          class="text-surface-300"
        >
          1,900
           
          kg
        </span>
        <span
          class="text-surface-600"
        >
           · 
        </span>
        2,700
         
        kg
         projected
      </p>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2  "
      >
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-check text-success-400 flex-shrink-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12l5 5l10 -10"
          />
        </svg>
        <span
          class="text-[13px] text-surface-300 truncate"
        >
          Set 
          1
           · 
          100
           
          kg
           × 
          10
        </span>
        <span
          class="ml-auto flex-shrink-0 text-[11px] text-surface-500"
        >
          3
           RIR · 
          <span
            class="text-success-400"
          >
            stimulative
          </span>
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2  "
      >
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-check text-success-400 flex-shrink-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12l5 5l10 -10"
          />
        </svg>
        <span
          class="text-[13px] text-surface-300 truncate"
        >
          Set 
          2
           · 
          100
           
          kg
           × 
          9
        </span>
        <span
          class="ml-auto flex-shrink-0 text-[11px] text-surface-500"
        >
          2
           RIR · 
          <span
            class="text-success-400"
          >
            stimulative
          </span>
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          100
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders with exercise history 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
           · 
          last session 100 kg × 10, × 9 @ 1–2 RIR · 1,900 kg vol
        </p>
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-chevron-down flex-shrink-0 text-surface-500 transition-transform "
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 9l6 6l6 -6"
          />
        </svg>
      </button>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders with hypertrophy score tier pill 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseCard Snapshot Tests renders with plateau pill 1`] = `
<div>
  <div
    class="rounded-xl bg-surface-900 border border-surface-800 relative overflow-hidden transition-all "
  >
    <div
      class="p-4 sticky top-0 bg-surface-900 z-10"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="flex min-w-0 flex-1 items-center"
        >
          <button
            class="min-w-0 truncate text-left text-[15px] font-medium text-surface-100 hover:text-primary-400 transition-colors"
          >
            Bench Press
          </button>
        </div>
        <div
          class="ml-auto flex items-center gap-0.5 flex-shrink-0"
        />
      </div>
      <div
        class="mt-1.5 flex flex-wrap items-center gap-1.5"
      >
        <button
          aria-haspopup="dialog"
          class="rounded-full px-2.5 py-1 text-[11px] font-medium leading-none flex-shrink-0 bg-warning-500/10 text-warning-400 hover:bg-warning-500/20 transition-colors"
        >
          Plateau
        </button>
      </div>
      <button
        class="mt-1 flex items-center justify-between w-full gap-2 text-left"
        disabled=""
      >
        <p
          class="min-w-0 text-[11px] text-surface-500 truncate"
        >
          <span>
            Chest
          </span>
        </p>
      </button>
    </div>
    <div
      class="px-3 py-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          2
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
      <div
        class="flex items-center gap-2 px-1 py-2 text-[12px] text-surface-500"
      >
        <span
          class="w-4 flex-shrink-0 text-center"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="text-surface-700"
        >
          |
        </span>
        <span
          class="truncate"
        >
          60
           kg
           ×
           
          8
          –
          12
           target
        </span>
      </div>
    </div>
    <div
      class="border-t border-surface-800"
    >
      <div
        class="divide-y divide-surface-800"
      >
        <div
          class=""
          data-accordion-item="form-cues"
        >
          <div
            class="px-4"
          >
            <button
              aria-expanded="false"
              class="flex items-center justify-between w-full py-3 text-left text-surface-200 hover:text-surface-100 transition-colors"
            >
              <span
                class="font-medium"
              >
                <span
                  class="text-sm text-surface-400"
                >
                  Form Cues & Tips
                </span>
              </span>
              <svg
                class="w-5 h-5 text-surface-400 transition-transform duration-200"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t border-surface-800 p-4"
    >
      <button
        class="flex items-center gap-2 text-sm text-surface-500 hover:text-surface-300 transition-colors"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Add note
      </button>
    </div>
  </div>
</div>
`;
